# ml-mobileclip-dr

./: .gitignore  ACKNOWLEDGMENTS  README.md  pyproject.toml
examples/: run_capgen.sh  run_embgen.sh
scripts/: gen.py  setup_cpu_worker.sh  setup_gpu_worker.sh
src/raygen/: datasetio.py  driver_utils.py  model_utils.py
src/raygen/cloud_common/: backoff_strategies.py  checkpointing.py  retrying.py  storage_utils.py
src/raygen/cloud_common/tests/: test_u_backoff_strategies.py
src/raygen/dr/: __init__.py  transforms.py  transforms_base.py
src/raygen/tests/: test_u_actor_smoke.py  test_u_initialize.py
